Fix spacing around books

--- a/css/sitewide.css
+++ b/css/sitewide.css
@@ -1269,8 +1269,16 @@ button.new-entry i {
 /* -------------------------------------------------------------------------- */
 /* Home Page                                                                  */
 /* -------------------------------------------------------------------------- */
+.row:last-child {
+  padding-bottom: 5px;
+}
+
 .row:last-child hr {
   display: none; /* Ensure that the last entry does not have an underline */
+}
+
+.row .books {
+  margin-bottom: 10px;
 }
 
 /* FIXME Fix my books entries not filling the width of the screen */
